app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: librespeed
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: librespeed
    spec:
      containers:
      - name: librespeed
        image: registry.rebrainme.com/workshops/middle/kubernetes-local/newplatform_autochecks/speedtest:5.3
        volumeMounts:
        - mountPath: "/servers.json"
          subPath: servers.json
          name: librespeed-servers
        ports:
        - containerPort: 80
      volumes:
      - name: librespeed-servers
        configMap:
          name: librespeed-servers
      imagePullSecrets:
      - name: registrysecret
