app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed-service
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: librespeed
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
