app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librespeed-ingress
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
  annotations:
    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
    # Добавляем нужные заголовки для передачи IP клиента
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Forwarded-For: $proxy_add_x_forwarded_for";
      more_set_headers "X-Real-IP: $remote_addr";
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: speed-.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: librespeed-service
            port:
              number: 80
